# RegimeForge-RL-

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  upgrade_analysis.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/regime_lens/: __init__.py  actor_critic.py  agent_io.py  analysis.py  artifacts.py  config.py  config_io.py  context.py  continuous_agent.py  continuous_market.py  data.py  dqn.py  experiment.py  explainability.py  hmm_dqn.py  market.py  metrics.py  oracle_dqn.py  rcmoe.py  run_experiments.py  runtime.py  stats_ext.py  tracking.py  training.py  transformer_agent.py  tui.py  visualization.py  web.py  world_model.py
backend/tests/: test_agent_io.py  test_analysis.py  test_batch34_scaffolding.py  test_checkpoint_restore.py  test_config_io.py  test_context.py  test_continuous_agent.py  test_continuous_market.py  test_continuous_training.py  test_data_injection.py  test_discrete_agents.py  test_edge_cases.py  test_market.py  test_runner_features.py  test_stats_ext.py  test_tracking.py  test_web_app.py  test_web_dashboard.py
docs/: architecture.md  experiments.md  ui-guide.md
scripts/: start_tui.ps1
